crates/test-generator/tests/snapshots/rust/test_generated_negative_literal.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let result = x10 - y3;

AST:
(source_file
  (let_declaration
    pattern: (identifier "result")
    value: (binary_expression
      left: (identifier "x10")
      right: (identifier "y3")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "result",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 11,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x10",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 17,
            },
            context: None,
        },
        Usage {
            name: "y3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 22,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
