crates/test-generator/tests/snapshots/rust/test_generated_never_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn8() -> ! { panic!("never returns") }

AST:
(source_file
  (function_item
    name: (identifier "test_fn8")
    parameters: (parameters)
    return_type: (never_type)
    body: (block
      (macro_invocation
        macro: (identifier "panic")
        (token_tree
          (string_literal ""never returns""
            (string_content)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn8",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 12,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "panic",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 22,
                end_line: 1,
                end_column: 27,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
