crates/test-generator/tests/snapshots/rust/test_generated_or_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match val2 { 0 | 1 => {} }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "val2")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (or_pattern
              (integer_literal "0")
              (integer_literal "1")
            )
          )
          value: (block)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "val2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
