crates/test-generator/tests/snapshots/rust/test_generated_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match option {
    Some(x) => x,
    None => 0,
}

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "option")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (tuple_struct_pattern
              type: (identifier "Some")
              (identifier "x")
            )
          )
          value: (identifier "x")
        )
        (match_arm
          pattern: (match_pattern
            (identifier "None")
          )
          value: (integer_literal "0")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 2:10 to 2:11 }, name: "x", definition_type: VariableDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:7 to 1:13 }, name: "option", kind: Identifier, context: None },
        Usage { position: { 2:5 to 2:9 }, name: "Some", kind: Identifier, context: None },
        Usage { position: { 2:16 to 2:17 }, name: "x", kind: Identifier, context: None },
        Usage { position: { 3:5 to 3:9 }, name: "None", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 4,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
