crates/test-generator/tests/snapshots/rust/test_generated_pointer_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let ptr: *const i32 = std::ptr::null();

AST:
(source_file
  (let_declaration
    pattern: (identifier "ptr")
    type: (pointer_type
      type: (primitive_type "i32")
    )
    value: (call_expression
      function: (scoped_identifier "std::ptr::null"
        path: (scoped_identifier "std::ptr"
          path: (identifier "std")
          name: (identifier "ptr")
        )
        name: (identifier "null")
      )
      arguments: (arguments)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:8 }, name: "ptr", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:23 to 1:26 }, name: "std", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:28 to 1:31 }, name: "ptr", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:33 to 1:37 }, name: "null", kind: Identifier, context: Some("scoped_identifier") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
