crates/test-generator/tests/snapshots/rust/test_generated_primitive_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var10: i32 = 42;

AST:
(source_file
  (let_declaration
    pattern: (identifier "var10")
    type: (primitive_type "i32")
    value: (integer_literal "42")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var10",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
