crates/test-generator/tests/snapshots/rust/test_generated_qualified_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test() -> <Vec<i32> as IntoIterator>::Item { 42 }

AST:
(source_file
  (function_item
    name: (identifier "test")
    parameters: (parameters)
    return_type: (scoped_type_identifier "<Vec<i32> as IntoIterator>::Item"
      path: (bracketed_type
        (qualified_type
          type: (generic_type
            type: (type_identifier "Vec")
            type_arguments: (type_arguments
              (primitive_type "i32")
            )
          )
          alias: (type_identifier "IntoIterator")
        )
      )
      name: (type_identifier "Item")
    )
    body: (block
      (integer_literal "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:4 to 1:8 }, name: "test", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:15 to 1:18 }, name: "Vec", kind: TypeIdentifier, context: Some("scoped_type_identifier") },
        Usage { position: { 1:27 to 1:39 }, name: "IntoIterator", kind: TypeIdentifier, context: Some("scoped_type_identifier") },
        Usage { position: { 1:42 to 1:46 }, name: "Item", kind: TypeIdentifier, context: Some("scoped_type_identifier") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
