crates/test-generator/tests/snapshots/rust/test_generated_range_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
(0..10);

AST:
(source_file
  (expression_statement
    (parenthesized_expression
      (range_expression
        (integer_literal "0")
        (integer_literal "10")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
