crates/test-generator/tests/snapshots/rust/test_generated_range_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match val3 { 0..=10 => {}, _ => {} }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "val3")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (range_pattern
              left: (integer_literal "0")
              right: (integer_literal "10")
            )
          )
          value: (block)
        )
        (match_arm
          pattern: (match_pattern)
          value: (block)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:7 to 1:11 }, name: "val3", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
